--- a/code/connectivity/cs-pairwise-ne8.ini
+++ b/code/connectivity/cs-pairwise-ne8.ini
@@ -4,7 +4,7 @@ habitat_map_is_resistances = True
 
 [Options for advanced mode]
 ground_file_is_resistances = False
-source_file = None`
+source_file = None
 remove_src_or_gnd = keepall
 ground_file = None
 use_unit_currents = False
@@ -21,15 +21,15 @@ use_included_pairs = False
 point_file = connectivity-data/circuitscape-inputs/source-pairwise-n2000-c01.tif
 
 [Output options]
-write_cum_cur_map_only = False
+write_cum_cur_map_only = True
 log_transform_maps = False
-output_file = connectivity-data/circuitscape-outputs/connectivity-pairwise-ne8
+output_file = connectivity-data/circuitscape-outputs/pw-ne8/connectivity-pairwise-ne8
 write_max_cur_maps = False
-write_volt_maps = True
+write_volt_maps = False
 set_null_currents_to_nodata = False
 set_null_voltages_to_nodata = False
 compress_grids = False
-write_cur_maps = True
+write_cur_maps = False
 
 [Short circuit regions (aka polygons)]
 use_polygons = False
