--- a/code/connectivity/pw-ne8.ini
+++ b/code/connectivity/pw-ne8.ini
@@ -18,18 +18,18 @@ print_timings = True
 [Options for pairwise and one-to-all and all-to-one modes]
 included_pairs_file = None
 use_included_pairs = False
-point_file = connectivity-data/circuitscape-inputs/pw-ne8/source-pairwise-n1000-c01.tif
+point_file = connectivity-data/circuitscape-inputs/pw-ne8/source-pairwise-n50-c01.tif
 
 [Output options]
 write_cum_cur_map_only = True
 log_transform_maps = False
-output_file = connectivity-data/circuitscape-outputs/pw-ne8/connectivity-pairwise-ne8
+output_file = connectivity-data/circuitscape-outputs/pw-ne8/pw-ne8
 write_max_cur_maps = False
 write_volt_maps = False
 set_null_currents_to_nodata = False
 set_null_voltages_to_nodata = False
 compress_grids = False
-write_cur_maps = False
+write_cur_maps = True
 
 [Short circuit regions (aka polygons)]
 use_polygons = False
@@ -49,7 +49,7 @@ mask_file = None
 
 [Circuitscape mode]
 data_type = raster
-scenario = pairwise
+scenario = one-to-all
 
 parallelize = True
-max_parallel = 8
+max_parallel = 14
