tweak .ini file

--- a/code/connectivity/ota-ne8-n500.ini
+++ b/code/connectivity/ota-ne8-n500.ini
@@ -49,7 +49,7 @@ mask_file = None
 
 [Circuitscape mode]
 data_type = raster
-scenario = pairwise
+scenario = one-to-all
 
 parallelize = True
 max_parallel = 14
