update to add variable source strength

--- a/code/connectivity/ota-ne8-n500.ini
+++ b/code/connectivity/ota-ne8-n500.ini
@@ -40,8 +40,8 @@ connect_four_neighbors_only = False
 connect_using_avg_resistances = True
 
 [Options for one-to-all and all-to-one modes]
-use_variable_source_strengths = False
-variable_source_file = None
+use_variable_source_strengths = True
+variable_source_file = connectivity-data/circuitscape-inputs/ota-ne8-n500/source-ota-n500-c01.txt
 
 [Mask file]
 use_mask = False
